--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -24,7 +24,7 @@
 	\acro{PCA}{Principal Component Analysis}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
 	\acro{sklearn}{scikit-learn}
-	\acro{SQL}{Short Query Language}
+	\acro{SQL}{Structured Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
 	\acro{t-SNE}{T-Distributed Stochastic Neighbor Embedding}
 	\acro{TPU}{Tensor Processing Unit}
