--- a/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
+++ b/Inhalt/04_Inhalt/ObjectivesandCriteria.tex
@@ -7,16 +7,16 @@ The task is to perform a full data analysis on the supplied dataset. The dataset
 
 \section{Criteria}
 \label{section:criteria}
-The task includes different criteria from a corporate perspective which need to be considered. The analysis should be performed utilizing only available resources, which are the student’s company laptop and already available instances for SAP internal services. The dataset which will later be presented is only available to SAP employees, and only after an access request for a specific use case is approved. Therefore, the tasks need to be completed with special attention to data protection. 
+The task includes different criteria from a corporate perspective which need to be considered. The analysis was performed utilizing data available from existing data repositories to derive insights. The dataset which will later be presented is only available to SAP employees, and only after an access request for a specific use case is approved. Therefore, the tasks need to be completed with special attention to data protection. 
 
-Additional quality criteria were established before the start of the work. Firstly, the solution should be designed according to industry standards. This also includes the choice for a fitting research model. Secondly, the source code is to be documented in such a way, that an expert third party can understand the workings of it in an appropriate time. Thirdly, the design of the source code should account for existing hardware limitations and should be optimized computationally.
+The following criteria were set before the start of this work to ensure quality of the output. Firstly, the solution should be designed according to industry standards. This also includes the choice for a fitting research model. Secondly, the source code is to be documented in such a way, that an expert third party can understand the workings of it in an appropriate time. Thirdly, the design of the source code should account for existing hardware limitations and should be optimized computationally.
 
 \label{research-model}
 \section{Research Model}
 
 To solve the task described in Chapter 1.2, this paper employs the \ac{CRISP-DM} \cite{CRISPDM2000}. This model puts forward a structure for conducting data mining projects. \ac{CRISP-DM} was developed in 1996 by three companies, which are now the partners of the \ac{CRISP-DM} consortium: NCR, DaimlerChrysler AG and SPSS Inc. 
 
-A poll \cite{CRISPDMPopular2020} conducted among visitors of a data science project management blog found that almost half of all respondents employ the \ac{CRISP-DM} process model. Followed by Scrum and Kanban with a 18\% and 12\% of the user share, \ac{CRISP-DM} is by far the most popular. Other methods such as \ac{KDD} and \ac{SEMMA} are also noteworthy alternatives, but are less popular that CRISP-DM, Scrum and Kanban.
+A poll conducted among visitors of a data science project management blog found that almost half of all respondents employ the \ac{CRISP-DM} process model \cite{CRISPDMPopular2020} . Followed by Scrum and Kanban with a 18\% and 12\% of the user share, \ac{CRISP-DM} is by far the most popular. Other methods such as \ac{KDD} and \ac{SEMMA} are also noteworthy alternatives, but are less popular that CRISP-DM, Scrum and Kanban \cite{CRISPDMPopular2020} .
 
 \begin{figure}[ht]
 	\centering
