--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -5,9 +5,9 @@
 	
 	The research questions set the focus on invoice data. In the corporate environment two fundamental sources for data exist. 
 	
-	Firstly, data can be sourced from inside the company. This can include customer data or data generated from observation and monitoring processes inside the company \cite{internalExternalData}. Data is either directly or very closely related to the company's business. Because internally sourced data is of utter utility and a possible target for industrial espionage, internally sourced data is almost exclusively rated confidential, limiting even intra-company access to it. Authorization processes and more than often not existing registries for data may hinder project progress.
+	Firstly, data can be sourced from inside the company. This can include data supplied by customers (within the limits of the GDPR) or data generated from observation and monitoring processes inside the company \cite{internalExternalData}. Data is either directly or very closely related to the company's business. Because internally sourced data is of utter utility and a possible target for industrial espionage, internally sourced data is almost exclusively rated confidential, limiting even intra-company access to it. Authorization processes and more than often not existing registries for data may hinder project progress.
 	
-	Secondly, data can be sourced outside the company. A vast number of online registries for data exist, both with paid and free of charge service offerings \cite{whyExternalData}. Data sources include social media data, sensory data and weather data. Because of its publication, the data is sometimes stripped from all parts which could expose confidential information such as corporate secrets. Additionally, data is anonymized for privacy reasons. External Data can give valuable insights into industries and markets especially for data scientists without access to paid databases, or for small businesses without the option for an own data collection.
+	Secondly, data can be sourced outside the company. A vast number of online registries for data exist, both with paid and free of charge service offerings \cite{whyExternalData}. Data sources include social media data, sensory data and weather data. Because of its publication, the data is sometimes stripped from all parts which could expose confidential information such as corporate secrets. Additionally, data is anonymized for privacy reasons. External data can give valuable insights into industries and markets especially for data scientists without access to paid databases, or for small businesses without the option for an own data collection.
 	
 		\begin{table}[!h]
 		\caption{Comparison of Data Sources}
@@ -32,7 +32,7 @@
 	Table \ref{table:data-sources} summarizes the advantages and disadvantages of each data source. It can be stated, that both sources are suited for different goals and different contexts. But, for data scientists with internal sources available, this type of source is more appealing because of the high relevance to the business.. An approach of connecting both internal and external data is an option, but not within the scope of this project. For this project, internally sourced data is chosen as a source.
 	
 	\section{Choosing a Dataset}
-	The dataset is the foundation of a data-science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data. The previous section set the source of data as internal data. In this section, a classification for data-science projects is introduced as a guide for dataset selection.
+	The dataset is the foundation of a data science project. The quality, size, and closeness to reality decide the helpfulness of findings made using the data. The previous section set the source of data as internal data. In this section, a classification for data science projects is introduced as a guide for dataset selection.
 	
 	\subsection{Project Types}
 \begin{table}[!ht]
@@ -53,11 +53,11 @@
 	\end{tabular}
 \end{table}
 
-	The first type of project is the problem-first project.	It is characterized by a predefined problem statement or research goal. The underlying question is how the project can solve a specific problem \cite[p.~3051]{dataScienceProjectTypes}.  For the selection of the dataset, this requires that achieving the goal can be measured with existing ground truth. In some cases, also other methods  can be sufficient, for example expert judgment. In a problem-first project different datasets can and should be considered. \cite[p.~3051]{dataScienceProjectTypes} give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established". This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence. This project falls into the systematic of an applied data science project.
+	The first type of project is the problem-first project.	It is characterized by a predefined problem statement or research goal. The underlying question is how the project can solve a specific problem \cite[p.~3051]{dataScienceProjectTypes}.  For the selection of the dataset, this requires that achieving the goal can be measured with existing ground truth. In some cases, also other methods  can be sufficient, for example expert judgment. In a problem-first project different datasets can and should be considered. Martinez-Plumed et al. give the metaphor of "mining for valuable minerals or metals at a given geographic location where the existence of the minerals or metals has been established" \cite[p.~3051]{dataScienceProjectTypes} . This means that it is already verified that the business goal can be reached with this specific dataset, hence the metaphor of already discovered mineral occurrence. This project falls into the systematic of an applied data science project.
 	
 	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite[p.~3051]{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and the problem to solve is not known. This is an exploratory data science project \cite[p.~3051]{dataScienceProjectTypes}.
 	
-	\subsection{Systematization and resulting Requirements}
+	\subsection{Systematization and Resulting Requirements}
 	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The research questions (\ref{section:research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
 
 	In a data-first project, there is no assumption of patterns. This for once means that a large dataset is required to cover enough ground for accurate derivation of insights. Second, a data-first project does not require structured data \cite{srivastavaDataMining}. Instead, unstructured and semi-structured data is also applicable for data-first projects. The resulting requirement therefore is that the dataset needs to be large enough.
