--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -10,6 +10,6 @@
 	With changes in the underlying hyperscalers for Leonardo, and evolving requirements of customers and partners, SAP adjusted their AI strategy. Two new products were introduced: SAP AI Core and SAP AI Launchpad. Both products are united under the collective name of AI Foundation \cite{rutschmannSAPLeonardo2021}. With the general availability of AI Foundation in late 2021, SAP Leonardo is officially sunsetted.
 	
 	\section{Organizational}
-	SAP SE has an executive board consisting of seven members, each attributed to one area. The \ac{AI} division falls into the responsibility of Jürgen Müller, Chief Technology Officer and leader of the board area for technology and innovation \cite{JuergenMuellerBiography}.
+	As of writing in June 2022, SAP SE has an executive board consisting of seven members, each attributed to one area. The \ac{AI} division falls into the responsibility of Jürgen Müller, Chief Technology Officer and leader of the board area for technology and innovation \cite{JuergenMuellerBiography}.
 	Members of the organizational unit for \ac{AI} are divided in different teams concerned with development, product success, operations and specific \ac{AI}-services. Development Teams are organized into \acp{CoE}, in which special expertise for designated areas is united.
 	SAP has a team of researchers around the world concerned with state-of-the-art topics, including few-shot learning, sentiment analysis, privacy and fairness \cite{AIOverviewResearch}. The research teams regularly publish articles on their advancements.
