--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \section{Motivation}
 
-More than 4 out of 5 financial departments are "overwhelmed by the high numbers of invoices they are expected to process"  \cite{manualInvoiceProcessing}. Already swamped departments of course struggle with providing information on savings potential. A solution for processing large amounts of invoice data with minimal human interference is desirable. Processing this information should transform unstructured data into a useful format, further the data should be enriched in a way giving insight and provide value for financial advisors. With analysis results of this automated processing, financial advisors can enjoy two improvements. Firstly, they have a factual base for recommendations. Secondly, their financial department is able to focus on more value-adding tasks. If an automated solution completes the time-consuming task of an in-depth analysis of spending, more time is available for interpreting the results.
+More than 4 out of 5 financial departments are "overwhelmed by the high numbers of invoices they are expected to process"  \cite{manualInvoiceProcessing}. Already swamped departments struggle with providing information on savings potential. A solution for processing large amounts of invoice data with minimal human interference is desirable. Processing this information should transform unstructured data into a useful format, further the data should be enriched in a way giving insight and provide value for financial advisors. With analysis results of this automated processing, financial advisors can enjoy two improvements. Firstly, they have a factual base for recommendations. Secondly, their financial department is able to focus on more value-adding tasks. If an automated solution completes the time-consuming task of an in-depth analysis of spending, more time is available for interpreting the results.
 
 In general, internal financial reporting aims to provide information about the health of a company, and supply means for improvement. Invoices are the main source of information for controlling \cite{investopediaInvoices}, as they record the complete history of cash flow \cite{invoicesPurpose}. An invoice is a document recording the main information on a sales transaction. Usually, an invoice contains the unit cost, a timestamp, and payment terms. Other information, such as shipping terms, shipping address, or discounts may also be included. 
 
@@ -15,13 +15,13 @@ How can information from invoice-like documents be extracted?
 How can extracted information provide insights?
 
 \section{Outline}
-The introductory Chapter briefly explains the motivation behind the thesis. Also, it assesses the current situation and presents research questions. Lastly, it presents the structure of the thesis.
+The introductory chapter briefly explains the motivation behind the thesis. Also, it assesses the current situation and presents research questions. Lastly, it presents the structure of the thesis.
 
-The following Chapter about objectives and criteria gives a detailed task description, and establishes criteria. In the Section \ref{research-model}, the process model is explained, evaluated and adjusted.
+The following Chapter about objectives and criteria gives a detailed task description, and establishes criteria. In Section \ref{research-model}, the process model is explained, evaluated and adjusted.
 
 Chapter 3 sheds light on the corporate environment with respect to the aspects of history and organization.
 
-Chapter 4 explains the process of selecting a dataset. The chapter presents fundamental types of projects and data sources, as well as decision-relevant criteria. With this criteria in mind, the chapter presents the selected dataset.
+Chapter 4 explains the process of selecting a dataset. The chapter presents fundamental types of projects and data sources, as well as decision-relevant criteria. With these criteria in mind, the chapter presents the selected dataset.
 
 Chapter 5 explains the business dimension of the task by presenting all relevant business and technical terms in a glossary. The chapter sets objectives and goals, while also proposing different measures to contains risks.
 Additionally, the chapter puts forward an initial assessment of tools and techniques.
