--- a/Inhalt/04_Inhalt/Evaluation.tex
+++ b/Inhalt/04_Inhalt/Evaluation.tex
@@ -1,4 +1,4 @@
-\chapter{Evaluation of the result}
+\chapter{Evaluation of the Result}
 Different Chapters in this thesis mention their respective objectives and criteria. This Chapter evaluated the result on the basis of these standards.
 
 \paragraph{Detailed Task Description}
