--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -3,11 +3,11 @@ In the guide complementing the \ac{CRISP-DM} model, different tasks, and outputs
 
 \section{Business Objectives}
 \label{section:business-objectives}
-Businesses without existing an \ac{ERP} solution in place can easily be overwhelmed by the number of invoices reaching them daily. Even more, the controlling department can easily lose the overview of spending. To quickly gain a perspective on the most important spending topics, spending should be sorted in categories of similar nature.
+Businesses without an existing \ac{ERP} solution in place can easily be overwhelmed by the number of invoices reaching them daily. Even more, the controlling department can easily lose the overview of spending. To quickly gain a perspective on the most important spending topics, spending should be sorted in categories of similar nature.
 
 The primary goal is the development of a solution for automatic aggregation of documents, based on topics addressed in those documents. The focus is on shorter text segments, such as product descriptions. The business objective is an information gain, on how spending is distributed among cross-cutting topics in a company.
 
-The created solution can be evaluated with the business success criterion: "Does the solution identify and give useful insights in the money pits?".
+The created solution can be evaluated with the business success criterion: "Does the solution identify and give useful insights into the money pits?".
 
 \section{Data Mining Goals}
 \label{section:data-mining-goals}
@@ -81,7 +81,7 @@ To summarize both relevant data mining and business terminology, a glossary was 
 
 
 
-\section{Initial assessment of tools and techniques}
+\section{Initial assessment of Tools and Techniques}
 
 \paragraph{Programming Language}
 A multitude of programming languages for statistical analyses and machine learning applications exist. The most popular and best supported are Python and R. Both languages are open source and targeted at data science tasks.
@@ -100,7 +100,7 @@ Deploying a Python solution is easily possible via APIs, web apps and containeri
 It can be stated that Python has superior ability to be scaled and deployed as it is a general purpose programming language. 
 
 \paragraph{Programming Paradigm}
-With the programming language decided, the basic programming paradigm has to be chosen. Python is an high-level object-oriented language, containing also functional aspects \cite[ch.~1.3.2]{corePython}. Python allows for programming using only scripts, but also supports and encourages the use of modules to separate files.
+With the programming language decided, the basic programming paradigm has to be chosen. Python is an high-level object-oriented language, containing also functional aspects \cite[ch.~1.3.2]{corePython}. Python allows for programming using only scripts, but also supports and encourages the use of modules for separating concerns.
 For data scientist, the decision between modular code and code contained in a notebook presents itself in the beginning of every project. Python code in modules can be organized into several files calling each other when needed. This option requires careful documentation, as there is no graphical interface showing dependencies between the modules.
 
 Python notebooks are structured to represent code, descriptions and the output. The most popular notebook format are Jupyter Notebooks, representing code and additional information as \ac{JSON} data \cite{jupyterteramArchitecture}.
