--- a/Inhalt/04_Inhalt/content_modeling.tex
+++ b/Inhalt/04_Inhalt/content_modeling.tex
@@ -3,7 +3,7 @@ The objective of this thesis is the grouping of expenses with the methods of \ac
 
 
 \section{Alternatives}
-\subsection{Similarity and distance measures}
+\subsection{Similarity and Distance Measures}
 A distance measure is a quantification of how near objects in space are. Distance measures can be defined for spaces of arbitrary numbers of dimensions. In the examples, four words (man, woman, king, queen) are compared in their semantic similarity. The word vectors were generated with a word embedding, but the focus is on comparing the distance measures available for clustering later on.
 
 		\begin{figure}[!h]
@@ -15,7 +15,7 @@ A distance measure is a quantification of how near objects in space are. Distanc
 	
 		\subparagraph{Dot Product}
 		The dot product is an operation transforming a vector into a scalar through multiplying the vectors element-wise. This operation is easily and efficiently calculated, but has some pitfalls.
-		While every word in the example (\ref{fig:dotproduct-heatmap}) ranks very high in similarity to itself, the distance between the word and itself is not always the same for every word. This happens because the dot product is not agnostic of a vector's magnitude. A vector's product with itself is the square of its magnitude. This results in the similarity of man-man to be lower than the similarity of queen-queen.
+		While every word in the example \ref{fig:dotproduct-heatmap} ranks very high in similarity to itself, the distance between the word and itself is not always the same for every word. This happens because the dot product is not agnostic of a vector's magnitude. A vector's product with itself is the square of its magnitude. This results in the similarity of man-man to be lower than the similarity of queen-queen.
 		This fact makes the dot product impractical for accurately representing the relationships of words.
 	
 					\[ 
@@ -24,7 +24,7 @@ A distance measure is a quantification of how near objects in space are. Distanc
 
 	
 		\subparagraph{Euclidean Distance} \label{euclidean}
-		For low-dimensional applications, this distance works well and shows great results. Euclidean distance can be calculated in a highly efficient manner, even for n dimensions. This suggests, that euclidean distance is particularly suitable for high-dimensional data. Unfortunately, euclidean distance falls victim to the curse of dimensionality. In \cite[p.~1]{beyerNearestNeighbor} it is proven that with increasing dimensions, the distance between data points approaches an uniform value for all data points. This effect could be demonstrated for spaces with as little as ten dimensions. Therefore, it can be said that euclidean distance is not suitable for high-dimensional data. With vectors in \ac{NLP} ranging from 100 to 800 dimensions with embeddings and hundreds of thousands with \ac{TF-IDF}, this distance measure is not suitable.
+		For low-dimensional applications, this distance works well and shows great results. Euclidean distance can be calculated in a highly efficient manner, even for n dimensions \cite[ch.~6.2]{40algorithms}. This suggests, that euclidean distance is particularly suitable for high-dimensional data. Unfortunately, euclidean distance falls victim to the curse of dimensionality. In \cite[p.~1]{beyerNearestNeighbor} it is proven that with increasing dimensions, the distance between data points approaches an uniform value for all data points. This effect could be demonstrated for spaces with as little as ten dimensions. Therefore, it can be said that euclidean distance is not suitable for high-dimensional data. With vectors in \ac{NLP} ranging from 100 to 800 dimensions with embeddings and hundreds of thousands with \ac{TF-IDF}, this distance measure is not suitable.
 		
 				\[ 
 		\text{euclidean distance} :=  \sum\limits_{i=1}^{n}{(A_i -  \mathbf{B}_i)^{2}} 
@@ -47,7 +47,7 @@ A distance measure is a quantification of how near objects in space are. Distanc
 		\end{figure} 
 	
 		\subparagraph{Cosine Similarity}
-		The name of this measure already suggests that not distance but similarity of objects is measured. Instead, it quantifies how close two vectors are.  Mathematically, the cosine distance is the cosine of the angle between two vectors. A wide angle means a high distance between two vectors, or in this case two words. Narrow angles stand for a low distance and words being closely related. In example \ref{fig:cosine}, the word vectors for woman and king have a higher angle than those of woman and queen. This means the words woman and queen are more similar thank woman and king.
+		The name of this measure already suggests that not distance but similarity of objects is measured. Instead, it quantifies how close two vectors are [ch.~6.1.2].  Mathematically, the cosine distance is the cosine of the angle between two vectors. A wide angle means a high distance between two vectors, or in this case two words [ch.~6.1.2]. Narrow angles stand for a low distance and words being closely related. In example \ref{fig:cosine}, the word vectors for woman and king have a higher angle than those of woman and queen. This means the words woman and queen are more similar thank woman and king.
 		
 		\[ 
 		\text{cosine similarity} := \cos(\theta) = {\mathbf{A} \cdot \mathbf{B} \over \|\mathbf{A}\| \|\mathbf{B}\|} = \frac{ \sum\limits_{i=1}^{n}{\mathbf{A}_i  \mathbf{B}_i} }{ \sqrt{\sum\limits_{i=1}^{n}{\mathbf{A}_i^2}}  \sqrt{\sum\limits_{i=1}^{n}{\mathbf{B}_i^2}} }
@@ -56,11 +56,11 @@ A distance measure is a quantification of how near objects in space are. Distanc
 		The difference between cosine distance and euclidean distance is clear: cosine measures the angle, and euclidean the vector length. But which one performs better in high dimensions? Cosine distance is perceived as more suitable for high dimensional data \cite[ch.~6.2]{40algorithms}, and often suggested for \ac{NLP} tasks. 
 		
 		But there is one fact left out in this suggestion: On normalized data (all vectors are unit vectors), cosine distance and euclidean distance are linearly connected \cite{khanRelationshipCosineSimilarity2020}.
-		<
+		
 		\begin{align*}
 			\cos(\theta_{AB}) &= {\mathbf{A} \cdot \mathbf{B} \over \|\mathbf{A}\| \|\mathbf{B}\|}  \\
 			\\
-			\text{for normalized vectors with } \|\mathbf{A}\| &=1 \text{ and } \|\mathbf{B}\| =1: \\
+			\text{For normalized vectors with } \|\mathbf{A}\| &=1 \text{ and } \|\mathbf{B}\| =1 \text{ this equals to}: \\
 			\cos(\theta_{AB}) &=  {\mathbf{A} \cdot \mathbf{B} \over 1 * 1 } = \mathbf{A} \cdot \mathbf{B}
 		\end{align*}
 		
@@ -72,12 +72,10 @@ A distance measure is a quantification of how near objects in space are. Distanc
 			&= \|\mathbf{A}\| -2 \sum\limits_{i=1}^{n}{\mathbf{A}_i\mathbf{B}_i} + \|\mathbf{B}\| \\
 			&= \|\mathbf{A}\| -2 (\mathbf{A} \cdot \mathbf{B}) + \|\mathbf{B}\| \\
 			\\
-			\text{for normalized vectors with }\|\mathbf{A}\| &=1 \text{ and } \|\mathbf{B}\| =1  \text{ and } \mathbf{A} \cdot \mathbf{B}  = \cos(\theta_{AB}):\\
-			d(\mathbf{A}, \mathbf{B}) &= 1 - 2 \cos(\theta_{AB}) + 1 = 2 - 2(\cos(\theta_{AB})) \\
-			\\
-			\text{Both solutions are linear to ea}& \text{ch other:} \\
-			2 - 2(\cos(\theta_{AB})) &\sim \cos(\theta_{AB})
+			\text{For normalized vectors with }\|\mathbf{A}\| &=1 \text{ and } \|\mathbf{B}\| =1  \text{ and } \mathbf{A} \cdot \mathbf{B}  = \cos(\theta_{AB}) \text{ this is equal to}:\\
+			d(\mathbf{A}, \mathbf{B}) &= 1 - 2 \cos(\theta_{AB}) + 1 = 2 - 2(\cos(\theta_{AB}))
 		\end{align*}
+		Both solutions are linear to each other: $2 - 2(\cos(\theta_{AB})) \sim \cos(\theta_{AB})$.
 	
 		Now, with the newly gained insight into the distance relationships of normalized vectors of $\cos(\theta_{AB}) = \mathbf{A} \cdot \mathbf{B}$ and $d(\mathbf{A}, \mathbf{B}) = 2 - 2(\cos(\theta_{AB}))$ , it can be stated that the cosine distance and euclidean distance of two normalized vectors are linearly related.
 				
@@ -148,7 +146,7 @@ Firstly, the word frequency in one cluster can determine the topic. Each word is
 This method is quite prone to skewing by one document containing a word many times.
 
 The second method uses the document frequency. This measure is also part of the \ac{TF-IDF} measure (\ref{section:tfidf}).
-The \ac{TF-IDF} vectorization method had to basic assumptions:
+The \ac{TF-IDF} vectorization method has two basic assumptions:
 \begin{enumerate}
 	\item Words with a high frequency in a document describe it well.
 	\item Words with a high frequency in a corpus do not describe one specific document well.
@@ -252,7 +250,7 @@ The table \ref{table:modeling} sums up all available alternatives from the prior
 
 \section{Practical Implementation}
 
-\subsection{Determining composition of dataset with KNeighbors Algorithm}
+\subsection{Determining Composition of Cataset with KNeighbors Algorithm}
 
 
 Both density-based and distance-based clustering algorithms work with distances between objects. Before any clustering is applied, an overview over the distances should be established \cite{maklinDBSCANPythonExample2022a}. This allows to make meaningful decisions while hyperparameter-tuning.
@@ -269,7 +267,7 @@ The distance search shows that almost all points are within a maximum distance o
 
 
 
-\subsection{Preselect documents with \ac{DBSCAN}}
+\subsection{Preselect Documents with \ac{DBSCAN}}
 The \ac{DBSCAN} algorithm outputs, apart from clusters, outlier data points which do not belong into any cluster. With this algorithm, outliers in the data are detected to prevent the main clustering algorithm (KMeans) from overfitting. 
 The clustering algorithm has the parameters \lstinline|eps| and \lstinline|metric| which tune the model.
 
@@ -277,9 +275,9 @@ The (distance) \lstinline|metric| is of course cosine. The \lstinline|eps| stand
 
 The \ac{DBSCAN} model identified the outlier data (\ref{fig:dbscan-outliers}), amounting to about 3\% of the data points. These data points are not included into clustering by k-Means.
 
-\subsection{Determine the number of Clusters}
+\subsection{Determine the Number of Clusters}
 The KMeans algorithm is parameterized with the number of clusters (\lstinline|n_clusters|). Since the algorithm itself is not able to determine the cluster count, this number has to be approximated.
-\cite{kodinariyaReviewDeterminingCluster2013} suggest several applicable methods, among them are rule of thumb, and the elbow method with a silhouette score.
+Kodinariya an Makwana suggest several applicable methods, among them are rule of thumb, and the elbow method with a silhouette score \cite{kodinariyaReviewDeterminingCluster2013}.
 A good point for starting with choosing $k$ is the rule of thumb $k \approx \sqrt{\frac{n}{2}}$ with n being the number of instances in the dataset. Other literature also names the approximation of $k \approx log(n)$, but \cite[p.~1749]{maierOptimalConstructionKnearest2009} showcase how $k$ should be chosen in the order of $n$. 
 
 \begin{table}[!h]
@@ -346,10 +344,10 @@ The training with k=3250 takes about four minutes. Most clusters formed are in t
 	\label{fig:clustersize}
 \end{figure}
 
-\subsection{Visualize cluster formation}
+\subsection{Visualize Cluster Formation}
 For visualizing, the \ac{t-SNE} algorithm is used. This projection allows to visualize the hundreds of dimensions of the embeddings in a two-dimensional representation. In Figure \ref{fig:kmeans}, the proximity of points stands for their close semantic relationship. Data points in the same color are contained in the same cluster. Since there are 3250 clusters, colors occur several times, even though they represent different clusters.
 
-This visualization gives an overview on the clusters, but doesn't show what is contained in the clusters. For this, each cluster needs a topic.
+This Figure \ref{fig:kmeans} gives an overview on the clusters but doesn't show what is contained in the clusters. For this, each cluster needs a topic.
 
 \begin{figure}[!ht]
 	\centering
